--- a/src/styles/notify.scss
+++ b/src/styles/notify.scss
@@ -33,7 +33,7 @@
       font-size: 14px;
       padding: 0;
       text-align: left;
-      font-family: 'Open Sans';
+      font-family: 'Roboto';
     }
     
 
